# structmeta

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: derive_parse.md  derive_to_tokens.md  parse.md  struct_meta.md  to_tokens.md
src/: lib.rs  parse.rs  syn_utils.rs  to_tokens.rs  to_tokens_attribute.rs
structmeta/: Cargo.toml
structmeta-derive/: Cargo.toml
structmeta-derive/src/: lib.rs  parse.rs  struct_meta.rs  syn_utils.rs  to_tokens.rs  to_tokens_attribute.rs
structmeta-tests/: Cargo.toml
structmeta-tests/examples/: readme.rs
structmeta-tests/src/: lib.rs
structmeta-tests/tests/: compile_fail.rs  parse.rs  struct_meta.rs  struct_meta_proc_macro.rs  test_utils.rs  to_tokens.rs
structmeta-tests/tests/compile_fail/parse/: mismatch_delimiter_enum.rs  mismatch_delimiter_enum.stderr  mismatch_delimiter_struct.rs  mismatch_delimiter_struct.stderr  mismatch_delimiter_tuple.rs  mismatch_delimiter_tuple.stderr  single_variant_fail.rs  single_variant_fail.stderr
structmeta-tests/tests/compile_fail/struct_meta/: duplicate_named_arguments.rs  duplicate_named_arguments.stderr  duplicate_named_arguments_with_rest.rs  duplicate_named_arguments_with_rest.stderr  duplicate_rest_named_argument.rs  duplicate_rest_named_argument.stderr  expected_flag_but_name_args.rs  expected_flag_but_name_args.stderr  expected_flag_but_name_value.rs  expected_flag_but_name_value.stderr  expected_name_args_buf_flag.rs  expected_name_args_buf_flag.stderr  expected_name_args_buf_name_value.rs  expected_name_args_buf_name_value.stderr  expected_name_args_or_flag_buf_name_value.rs  expected_name_args_or_flag_buf_name_value.stderr  expected_name_value_but_flag.rs  expected_name_value_but_flag.stderr  expected_name_value_but_name_args.rs  expected_name_value_but_name_args.stderr  expected_name_value_rest_but_name_args.rs  expected_name_value_rest_but_name_args.stderr  hash_map_flag.rs  hash_map_flag.stderr  missing_named_argument.rs  missing_named_argument.stderr  missing_unnamed_argument.rs  missing_unnamed_argument.stderr  missing_unnamed_argument_inner.rs  missing_unnamed_argument_inner.stderr  not_parse.rs  not_parse.stderr  option_bool.rs  option_bool.stderr  option_flag.rs  option_flag.stderr  option_hash_map.rs  option_hash_map.stderr  option_not_parse.rs  option_not_parse.stderr  (+10 more)
structmeta-tests/tests/compile_fail/to_tokens/: invalid_argument.rs  invalid_argument.stderr  mismatch_delimiter.rs  mismatch_delimiter.stderr  mismatch_surround.rs  mismatch_surround.stderr  not_impl_to_tokens.rs  not_impl_to_tokens.stderr
structmeta/src/: arg_types.rs  easy_syntax.rs  helpers.rs  lib.rs
tests/: parse.rs  to_tokens.rs
