[package]
name = "structmeta-derive"
version = "0.2.0"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/structmeta"
documentation = "https://docs.rs/structmeta/"
keywords = ["derive", "parse", "attribute", "syn", "totokens"]
categories = ["development-tools::procedural-macro-helpers"]
description = "derive macro for structmeta crate."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.52"
syn = "2.0.4"
quote = "1.0.26"

[dev-dependencies]
syn = { version = "2.0.2", features = ["extra-traits"] }
