[package]
name = "structmeta-tests"
version = "0.0.0"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
structmeta = { path = "../structmeta" }
proc-macro2 = "1.0.78"
syn = { version = "2.0.48", features = ["extra-traits", "full"] }
quote = "1.0.35"
trybuild = "1.0.89"
toml = "0.8.8"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
ignore = "0.4.22"
regex = "1.10.3"
