[package]
name = "structmeta-tests"
version = "0.0.0"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
structmeta = { path = "../structmeta" }
proc-macro2.workspace = true
syn = { workspace = true, features = ["extra-traits", "full"] }
quote.workspace = true
trybuild = "1.0.89"
toml = "0.8.8"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
regex = "1.10.3"
