[package]
name = "structmeta"
version = "0.1.5"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/structmeta"
documentation = "https://docs.rs/structmeta/"
keywords = ["derive", "parse", "attribute", "syn", "totokens"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Parse Rust's attribute arguments by defining a struct."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structmeta-derive = { version = "=0.1.5", path = "../structmeta-derive" }
proc-macro2 = "1.0.33"
syn = "1.0.82"
quote = "1.0.10"


[dev-dependencies]
syn = { version = "1.0.82", features = ["extra-traits", "full"] }
