[package]
name = "structmeta"
version = "0.3.0"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/frozenlib/structmeta"
documentation = "https://docs.rs/structmeta/"
keywords = ["derive", "parse", "attribute", "syn", "totokens"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Parse Rust's attribute arguments by defining a struct."
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structmeta-derive = { version = "=0.3.0", path = "../structmeta-derive" }
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true


[dev-dependencies]
syn = { workspace = true, features = ["extra-traits", "full"] }
